--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
   </head>
   <body>
     <div id="container">
+      <form class="userInputForm" action="index.html" method="post">
+        <input class="userInput"type="text" name="name" value="" placeholder="Enter a Movie Title">
+        <input class="submitButton"type="button" name="name" value="Submit">
+      </form>
       <div id="center_column">
-
+        
       </div>
     </div>
   </body>
+  <script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
   <script type="text/javascript" src="script.js">
   </script>
 </html>
